Popravil:  - Uporabnik ne more dodati nepopolne gobe (brez imena in hashtaga)  - Mapa se odpre na trenutni lokaciji oz. kjer se uporabnik nahaja. Uporabnikova lokacija označena z drugim markerjem.  - Ob zagonu aplikacija upošteva filtre  - Gobi lahko spremenimo ime  - dodane oz. izboljšane ikone  - dodane prave slike gob v testne podatke  - za vsako gobo lahko dobimo navodila za pot do nje preko google maps  - v seznamu prikaže pri vsak igobe prikaže le tiste hastage ki so na tej lokaciji

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     compile 'com.karumi:dexter:4.1.0'
     compile 'com.google.android:flexbox:0.2.6'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     testCompile 'junit:junit:4.12'
 }
