--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.nikolajcolic.jazgobar"
         minSdkVersion 19
@@ -30,6 +30,7 @@ dependencies {
     //https://github.com/greenrobot/EventBus
     //Za pridobivanje pravic https://github.com/Karumi/Dexter
     //https://github.com/google/flexbox-layout
+    compile files('libs/commons-validator-1.6.jar')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     compile 'com.android.support:design:24.2.1'
@@ -42,5 +43,7 @@ dependencies {
     compile 'com.google.android:flexbox:0.2.6'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'net.gotev:uploadservice:2.1'
     testCompile 'junit:junit:4.12'
 }
